--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
-h1 {align-content:center;
+body {
+   margin:10px;
+}
+h1 {
+   font-size: 2rem;
+   text-align: center;
+}
+
+address {
+   text-align: right;
 }
 
