--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,30 @@
+
 body {
-   margin:10px;
+   margin: 20px;
+   background-color: #d7deff;
 }
 h1 {
-   font-size: 2rem;
+   font-size: 3rem;
    text-align: center;
 }
 
+h2 {
+   font-size: 2rem;
+   text-align: center;
+}
 address {
    text-align: right;
+   font-style: italic;
 }
 
+#quote1 {
+   text-align: center;
+   font-style: italic;
+}
+.quote {
+   font-style: italic;
+}
+
+ol {
+   margin-left: 100px;
+}
