--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,14 @@ body {
 h1 {
    font-size: 3em;
    text-align: center;
+   font-family: 'Dancing Script', cursive;
 }
 
 h2 {
    font-size: 2em;
    text-align: center;
+   font-family: 'Open Sans', sans-serif;
+   font-weight: 400;
 }
 address {
    text-align: right;
@@ -27,8 +30,16 @@ address {
 
 ol {
    margin-left: 100px;
+   font-family: 'Open Sans', sans-serif;
+   font-weight: 300;
 }
 
 li {
    padding-bottom:10px;
+   font-family: 'Open Sans', sans-serif;
+   font-weight: 300;
+}
+p {
+   font-family: 'Open Sans', sans-serif;
+   font-weight: 400;
 }
