--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,22 @@ h2 {
    text-align: center;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
+   color: #800000;
 }
 address {
-   text-align: right;
+   margin-left: 800px;
    font-style: italic;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
+   padding-bottom: 10px;
 }
 
 #quote1 {
    text-align: center;
    font-style: italic;
+   margin: auto;
+   width: 650px;
+   padding-bottom: 20px;
 }
 .quote {
    font-style: italic;
@@ -34,15 +39,17 @@ address {
 ol {
    margin-left: 100px;
    font-family: 'Open Sans', sans-serif;
-   font-weight: 400;
+   font-weight: 300;
 }
 
 li {
    padding-bottom:10px;
    font-family: 'Open Sans', sans-serif;
-   font-weight: 400;
+   font-weight: 300;
 }
 p {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
+   padding-bottom: 5px;
+   padding-top: 5px;
 }
